# tui_bricks

./: .gitignore  Cargo.toml  all_lego_part_colors.txt  notes.rs  output.txt
app/: Cargo.toml
app/src/: cmd.rs  command.rs  config.rs  data.rs  display.rs  error.rs  io.rs  lib.rs  main.rs  mode.rs  state.rs
cli_tools/tui_bricks_database_client/: Cargo.toml
cli_tools/tui_bricks_database_client/src/: main.rs
cli_tools/tui_bricks_database_server/: Cargo.toml
cli_tools/tui_bricks_database_server/src/: main.rs
cli_tools/tui_bricks_update_image/: Cargo.toml
cli_tools/tui_bricks_update_image/src/: main.rs
database/: Cargo.toml
database/src/: lib.rs
database/test-data/: colors_example.csv  elements_example.csv
libs/database/: Cargo.toml
libs/database/src/: client_database.rs  lib.rs  local_database.rs  rebrickable_database.rs  rebrickable_server.rs
libs/database/test-data/: parts_example.csv
libs/utils/: Cargo.toml
libs/utils/src/: display_short.rs  lib.rs  path_ext.rs  serde_ext.rs  strong_type.rs  tcp_ext.rs
rebrickable/client/: Cargo.toml
rebrickable/client/src/: cli.rs  client.rs  database.rs  lib.rs  main.rs
rebrickable/database/: Cargo.toml
rebrickable/database/src/: lib.rs
rebrickable/database_api/: Cargo.toml
rebrickable/database_api/src/: lib.rs
rebrickable/server/: Cargo.toml
rebrickable/server/src/: lib.rs  main.rs
rebrickable/server_api/: Cargo.toml
rebrickable/server_api/src/: lib.rs
small_cli/: Cargo.toml  test_file.txt
small_cli/src/: main.rs
small_dat/: Cargo.toml
small_dat/src/: main.rs
src/: cmd.rs  command.rs  config.rs  data.rs  display.rs  error.rs  input.rs  io.rs  lib.rs  main.rs  mode.rs  state.rs
term_lib/: Cargo.toml
term_lib/src/: cmd.rs  cmd_test.rs  command.rs  display.rs  input.rs  lib.rs  prompt.rs
tui_bricks/: Cargo.toml
tui_bricks/src/: cmd.rs  data.rs  error.rs  io.rs  lib.rs  main.rs
tui_bricks2/: Cargo.toml
tui_bricks2/src/: lib.rs  main.rs  mode.rs
tui_bricks2/src/mode/: home.rs  view_item.rs
tui_cli/: Cargo.toml  cli_test.rs
tui_cli/src/: main.rs
