[workspace]
members = [
  "tui_bricks",
  "tui_cli",
  "cli_tools/tui_bricks_update_image",
  "libs/database",
  "libs/utils",
  "cli_tools/tui_bricks_database_server",
  "cli_tools/tui_bricks_database_client",
]
default-members = [
  "tui_bricks",
]

resolver="2"

[workspace.dependencies]
database = { path = "libs/database" }
tui_bricks_update_image = { path = "cli_tools/tui_bricks_update_image" }
utils = { path = "libs/utils" }

clap = { version = "4.5.*", features = ["derive"] }
directories-next = "2.0.*"
serde = { version = "1.0.*", features = ["derive"] }
bincode = { version = "2.0.*", features = ["derive"] }
