[workspace]
members = [
  "tui_bricks",
  "cli_tools/tui_bricks_update_image",
  "libs/utils",
  "rebrickable/client",
  "rebrickable/database",
  "rebrickable/database_api",
  "rebrickable/server",
  "rebrickable/server_api", "tui_bricks2",
]
default-members = [
  "tui_bricks",
]

resolver="2"

[workspace.dependencies]
tui_bricks_update_image = { path = "cli_tools/tui_bricks_update_image" }
utils = { path = "libs/utils" }
rebrickable_client = { path = "rebrickable/client" }
rebrickable_database = { path = "rebrickable/database" }
rebrickable_database_api = { path = "rebrickable/database_api" }
rebrickable_server = { path = "rebrickable/server" }
rebrickable_server_api = { path = "rebrickable/server_api" }

clap = { version = "4.5.*", features = ["derive"] }
directories = "6.0.*"
serde = { version = "1.0.*", features = ["derive"] }
bincode = { version = "2.0.*", features = ["derive"] }
csv = { version = "1.4.*" }
rstest = { version = "0.26.*" }
ctrlc = { version = "3.0.*" }
