[package]
name = "database"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
csv = "1.3.1"
rstest = "0.25"
derive_more = { version = "2.0.1", features = ["from", "deref", "display"] }
