[package]
name = "term_lib"
version = "0.1.0"
edition = "2021"

[lib]
# Allow Rust to build rust static library (rlib) and c compatible library (cdylib)
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
strum = { version = "0.25", features = ["derive"] }

crossterm = "0.27.0"

directories = "5.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.9"
