[package]
name = "tui_bricks"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
term_lib = { path = "../../term_lib/" }

serde = { workspace = true }
serde_yaml = "0.9"
strum = { version = "0.26", features = ["derive"] }

webbrowser = "0.8.12"

directories = "5.0"
figment = { version = "0.10.10", features = ["yaml"] }

thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
