[package]
name = "database"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { workspace = true }

serde = { workspace = true }
csv = "1.3.1"
rstest = "0.25"
derive_more = { version = "2.0.1", features = ["from", "deref", "display"] }
